[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scene/Arbeitsplatte/TubeRack.gd" type="Script" id=1]
[ext_resource path="res://Texture/Rack.png" type="Texture" id=2]

[node name="TubeRack" type="Node2D" index="0"]

position = Vector2( 321.631, 524.761 )
scale = Vector2( 9, 2.5 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="RackHintergrund" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Tuberack_Control" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="TextEingabeInfo" type="AcceptDialog" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 250.0
margin_right = 447.0
margin_bottom = 325.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_text = "Bitte die gewünschte Bezeichnung für den Tube in
das Textfeld eingeben und dann auf Enter drücken"
dialog_hide_on_ok = true
_sections_unfolded = [ "Rect" ]

[connection signal="mouse_entered" from="Tuberack_Control" to="." method="_on_RackHintergrund_mouse_entered"]

[connection signal="mouse_exited" from="Tuberack_Control" to="." method="_on_RackHintergrund_mouse_exited"]


